--- a/package.json
+++ b/package.json
@@ -11,5 +11,5 @@
 , "keywords"     : [ "yql" ]
 , "repository"   : { "type" : "git", "url" : "http://github.com/drgath/node-yql.git" }
 , "bugs"         : { "mail" : "drg@yahoo-inc.com", "web": "https://github.com/drgath/node-yql/issues" }
-, "licenses"     : [ { "type": "BSD", "url": "https://github.com/drgath/node-yql/raw/master/LICENSE.txt" } ]
+, "licenses"     : [ { "type": "BSD", "url": "https://github.com/drgath/node-yql/raw/master/LICENSE" } ]
 , "dependencies" : { "request" : ">=1.9.5" }}
