--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 , "url"          : "http://github.com/drgath/node-yql"
 , "contributors" : [ "Michael Matuzak <matuzak@yahoo-inc.com>" ]
 , "keywords"     : [ "yql" ]
-, "repositories" : [ {"type" : "git", "url" : "http://github.com/drgath/node-yql.git" } ]
-, "bugs"         : { "mail" : "drg@yahoo-inc.com", "web": "https://github.com/drgath/node-yql/issues" }
-, "licenses"     : [ { "type": "BSD", "url": "https://github.com/drgath/node-yql/raw/master/LICENSE" } ]
+, "repositories" : [ {"type" : "git", "url" : "http://github.com/derek/node-yql.git" } ]
+, "bugs"         : { "mail" : "drg@yahoo-inc.com", "web": "https://github.com/derek/node-yql/issues" }
+, "licenses"     : [ { "type": "BSD", "url": "https://github.com/derek/node-yql/raw/master/LICENSE" } ]
 , "dependencies" : { "request" : ">=1.9.5" }}
