--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name"         : "yql"
-, "version"      : "0.4.3"
+, "version"      : "0.4.4"
 , "engines"      : { ">=npm":"1.0.0", "node":">=v0.4.4" }
 , "maintainers"  : [ { "name": "Derek Gathright", "email": "drg@yahoo-inc.com" } ]
 , "scripts"      : { "test": "test.js" }
@@ -9,7 +9,7 @@
 , "url"          : "http://github.com/drgath/node-yql"
 , "contributors" : [ "Michael Matuzak <matuzak@yahoo-inc.com>" ]
 , "keywords"     : [ "yql" ]
-, "repositories" : [ {"type" : "git", "url" : "http://github.com/derek/node-yql.git" } ]
+, "repository"   : {"type" : "git", "url" : "http://github.com/derek/node-yql.git" }
 , "bugs"         : { "mail" : "drg@yahoo-inc.com", "web": "https://github.com/derek/node-yql/issues" }
 , "licenses"     : [ { "type": "BSD", "url": "https://github.com/derek/node-yql/raw/master/LICENSE" } ]
 , "dependencies" : { "request" : ">=1.9.5" }}
