--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 { "name"         : "yql"
-, "version"      : "0.4.4"
-, "engines"      : { ">=npm":"1.0.0", "node":">=v0.4.4" }
+, "version"      : "0.4.5"
+, "engines"      : { ">=npm":"1.0.92", "node":">=v0.5.8" }
 , "maintainers"  : [ { "name": "Derek Gathright", "email": "drg@yahoo-inc.com" } ]
 , "scripts"      : { "test": "test.js" }
 , "main"         : "./lib/yql"
 , "directories"  : { "lib" : "./lib/" }
 , "description"  : "A YQL (Yahoo Query Language) client"
-, "url"          : "http://github.com/drgath/node-yql"
+, "url"          : "https://github.com/derek/node-yql"
 , "contributors" : [ "Michael Matuzak <matuzak@yahoo-inc.com>" ]
 , "keywords"     : [ "yql" ]
 , "repository"   : {"type" : "git", "url" : "http://github.com/derek/node-yql.git" }
 , "bugs"         : { "mail" : "drg@yahoo-inc.com", "web": "https://github.com/derek/node-yql/issues" }
 , "licenses"     : [ { "type": "BSD", "url": "https://github.com/derek/node-yql/raw/master/LICENSE" } ]
-, "dependencies" : { "request" : ">=1.9.5" }}
+, "dependencies" : { "request" : ">=2.1.1" }}
